fix: card margin on mobile devices

--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -17,6 +17,11 @@
       margin-right: 5px
       &:last-child
         margin-right: 0
+  .projects > app-card
+    margin-right: 20px
+
+    &:last-child
+      margin-right: 0
 
 @media (max-width: 900px)
   .home-container
@@ -28,6 +33,9 @@
         margin-right: 0 !important
     .projects
       flex-direction: column
+      app-card
+        margin-right: 0 !important
+        margin-bottom: 20px
 
 #me
   border-radius: 50%
